added instance type option
