# api/openapi.yaml
@@ -605,6 +605,9 @@ components:
           workload_prompt: workload_prompt
           cost_perf_weight: -0.8398343619077977
         constraints:
+          instance_types:
+          - instance_types
+          - instance_types
           regions:
           - regions
           - regions
@@ -992,6 +995,9 @@ components:
           project: ""
           setup: ""
           resources:
+            instance_types:
+            - instance_types
+            - instance_types
             regions:
             - regions
             - regions
@@ -1076,6 +1082,9 @@ components:
         project: ""
         setup: ""
         resources:
+          instance_types:
+          - instance_types
+          - instance_types
           regions:
           - regions
           - regions
@@ -1420,6 +1429,9 @@ components:
           project: ""
           setup: ""
           resources:
+            instance_types:
+            - instance_types
+            - instance_types
             regions:
             - regions
             - regions
@@ -1614,6 +1626,9 @@ components:
     Resources:
       description: Resource configuration serializer.
       example:
+        instance_types:
+        - instance_types
+        - instance_types
         regions:
         - regions
         - regions
@@ -1637,6 +1652,11 @@ components:
         vram: 2
       properties:
         clouds:
+          items:
+            nullable: true
+            type: string
+          type: array
+        instance_types:
           items:
             nullable: true
             type: string
@@ -1760,6 +1780,9 @@ components:
           project: ""
           setup: ""
           resources:
+            instance_types:
+            - instance_types
+            - instance_types
             regions:
             - regions
             - regions
